# Flame-Route

./: .clang-format  .cmake-format  CMakeLists.txt  CONTRIBUTING.md  Memory Report.md  README.md  TODO.md  check  check.sh  fmt.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  test.yml
cmake/: FindBrotli.cmake
examples/: CMakeLists.txt  m.c  main.c  main.cpp  target.cpp
examples/templates/: index.html
hooks/: pre-commit
src/: CMakeLists.txt  config.hpp  main.c  main.cpp
src/compression/: CMakeLists.txt  brotli.cpp  brotli.hpp
src/http/: CMakeLists.txt  error.cpp  error.hpp  http.c  http.h  method.h  method.hpp  request.c  request.cpp  request.h  request.hpp  response.c  response.cpp  response.h  response.hpp  route.c  route.h  route.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
src/json/: .gitignore  CMakeLists.txt  json.hpp
src/logger/: CMakeLists.txt  logger.hpp
src/mime/: CMakeLists.txt  generate  mime-lookup.def  mime.c  mime.cpp  mime.gperf  mime.hpp
src/orm/: CMakeLists.txt  database.hpp  database_exception.hpp  model.hpp  orm.cpp  orm.hpp  query.hpp
src/orm/driver/: sqlite3.cpp  sqlite3.hpp
src/socket/: CMakeLists.txt  socket.cpp  socket.hpp
src/templates/: .gitignore  CMakeLists.txt  inja.hpp  inja.hpp.patch  jinja.cpp  jinja.hpp
src/utils/: CMakeLists.txt  route-map.c  route-map.h  route-map.hpp  shared-queue.hpp  string-map.c  string-map.h  string-map.hpp  utils.c  utils.cpp  utils.h  utils.hpp
static/: hello.json
test/: dynamic-route.sh  hello.sh  memory.sh  test.sh
