set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused -Werror")


File(GLOB HTTP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_library(HTTP STATIC ${HTTP_SOURCES})

# Install headers
File(GLOB HTTP_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
list(REMOVE_ITEM HTTP_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/utils.hpp)

install(FILES ${HTTP_HEADERS} DESTINATION "${FLAME_INCLUDE_DIR}/http")

